<resources>
    <string name="app_name" translatable="false">IGFlexin</string>

    <string name="facebook_app_id" translatable="false">686772235042657</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb686772235042657</string>

    <string name="increase_your_ig_follower_count">Increase your IG follower count!</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="or">OR</string>
    <string name="how_it_works_see_for_yourself">How it works? See for yourself!</string>
    <string name="by_creating_an_account_i_accept_igflexin_s_terms_of_service">By creating an account, I accept IGFlexin\'s\nPrivacy Policy.</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="error_check_your_connection">Error, check your connection!</string>
    <string name="error_occurred">An error occurred!</string>
    <string name="account_not_found">User with this email does not exist!</string>
    <string name="account_disabled">Account with this email is disabled!</string>
    <string name="account_already_exists">Account with this email already exists, sign in!</string>
    <string name="account_exists_with_different_auth_method">This email is associated with another auth method!</string>
    <string name="account_auth_credential_link_to_another_account">This credential is linked to another account!</string>
    <string name="invalid_password">Invalid email and password combination!</string>
    <string name="weak_password">Your password is too weak!</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_again">Password Again</string>
    <string name="back">Back</string>
    <string name="error_name">Name must be at least 3 characters long!</string>
    <string name="error_email">Wrong email format!</string>
    <string name="error_password">Password must have at least 8 characters, 1 capital letter and 1 number!</string>
    <string name="error_password_again">Passwords are not same!</string>
    <string name="error_field_required">This field is required</string>
    <string name="verification_link_has_been_sent_to_your_email_activate_your_account_and_go_back_to_the_app_to_sign_in">Verification link has been sent to your email. Activate your account and go back to the app to log in!</string>
    <string name="email_verification">Email verification</string>
    <string name="try_again">Retry</string>
    <string name="sending_verification_email_failed">Sending verification email failed!</string>
    <string name="sending_verification_email_failed_no_connection">Sending verification email failed! Check your internet connection!</string>
    <string name="weekly">WEEKLY</string>
    <string name="monthly">MONTHLY</string>
    <string name="quarterly">QUARTERLY</string>
    <string name="unknown">UNKNOWN</string>
    <string name="choose_your_subscription_period">Choose your subscription period</string>
    <string name="select">Select</string>
    <string name="fifty_percent_off_on_first_payment">50% off on first payment</string>
    <string name="first_seven_days_for_free">First 7 days for free (cancel anytime)</string>
    <string name="error">Error</string>
    <string name="retry">RETRY</string>
    <string name="choose_your_bundle">Choose your bundle</string>
    <string name="choose_your_weekly_bundle">Choose your\nWEEKLY bundle</string>
    <string name="choose_your_monthly_bundle">Choose your\nMONTHLY bundle</string>
    <string name="choose_your_quarterly_bundle">Choose your\nQUARTERLY bundle</string>
    <string name="basic">BASIC</string>
    <string name="standard">STANDARD</string>
    <string name="business">BUSINESS</string>
    <string name="business_pro">BUSINESS PRO</string>
    <string name="no_ig_account_restrictions">No IG account restrictions</string>
    <string name="must_have_100_follows_and_15_posts_restriction">Each of your IG accounts must have at least 100 follows and 15 posts</string>
    <string name="limited_to_one_ig_acc">Limited to 1 Instagram account</string>
    <string name="up_to_three_ig_accs">Up to 3 Instagram accounts</string>
    <string name="up_to_five_ig_accs">Up to 5 Instagram accounts</string>
    <string name="up_to_ten_ig_accs">Up to 10 Instagram accounts</string>
    <string name="error_loading_subscriptions">Error loading subscriptions.</string>
    <string name="error_loading_subscriptions_check_your_internet_connection">Error loading subscriptions, check your internet connection.</string>
    <string name="service_unavailable">Service is unavailable.</string>
    <string name="feature_not_supported">Feature is not supported.</string>
    <string name="error_loading_subscriptions_service_disconnected">Error loading subscriptions, service is disconnected.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dashboard">Dashboard</string>
    <string name="accounts">Accounts</string>
    <string name="subscription">Subscription</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="switcherino">SWITCH</string>
    <string name="activated">ACTIVATED</string>
    <string name="manage">MANAGE</string>
    <string name="subscription_is_already_purchased_for_another_acc">This subscription is already purchased for another IGFlexin account. If it´s not restart the app and try it again later.</string>
    <string name="log_out">Log out</string>
    <string name="wrong_gp_account_error">You might be logged to Google Play with account which is different from account where you have purchased the subscription.</string>
    <string name="restore">RESTORE</string>
    <string name="problem_with_payment_method">There is a problem with your payment method. Fix it or you will lose your subscription.</string>
    <string name="fix">FIX</string>
    <string name="add">ADD</string>
    <string name="no_accounts_found">No accounts found</string>
    <string name="add_your_first_account">Add your first account</string>
    <string name="error_occured_while_loading_your_accounts">Error occurred while loading your accounts</string>
    <string name="profile_picture">Profile picture</string>
    <string name="username">Username</string>
    <string name="new_password">New password</string>
    <string name="edit">Edit</string>
    <string name="not_connected_content_unavailable">You are not connected to the internet. Some content might be unavailable!</string>
    <string name="loading_more_info">Loading more info…</string>
    <string name="error_loading_more_info">Error loading more info</string>
    <string name="pause">Pause</string>
    <string name="delete">Delete</string>
    <string name="waiting_for_service">Waiting for service</string>
    <string name="status">STATUS:</string>
    <string name="foreground_notification_channel_id" translatable="false">foreground_notification_channel</string>
    <string name="foreground_notification_channel">Foreground</string>
    <string name="foreground_notification_channel_description">Foreground notification that is displayed all the time.</string>
    <string name="is_now_running"> is now running</string>
    <string name="getting_you_more_followers">Getting you more followers!</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="new_username">New username</string>
    <string name="contact">Contact us</string>
    <string-array name="edit_options">
        <item>Edit username</item>
        <item>Edit password</item>
    </string-array>
    <string-array name="using_options">
        <item>Using username and password</item>
        <item>Using Facebook</item>
    </string-array>
</resources>
